# mcp-changelog

./: .gitignore  PUBLISH.md  README.md  pyproject.toml
src/mcp_changelog/: __init__.py  analyze.py  cache.py  server.py  sources.py  version.py
tests/: test_basic.py
